# rock-paper-scissors-py

./: COPYING  README.md  flake.nix  pyproject.toml
rock_paper_scissors/: __main__.py  game.py
